oxiplate/tests/crates/config-malformed/tests/broken/malformed-config.stderr
error: Failed to parse `/oxiplate.toml`: `=` expected after key
 --> tests/broken/malformed-config.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `render` found for struct `Data` in the current scope
 --> tests/broken/malformed-config.rs:8:21
  |
5 | struct Data;
  | ----------- method `render` not found for this struct
...
8 |     assert_eq!(Data.render().unwrap(), "Hello world!");
  |                     ^^^^^^ method not found in `Data`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `render`, perhaps you need to implement it:
          candidate #1: `Render`
